fixed bigheader alignment by changing with of mainheader and bigHeader, using text align center

--- a/css/index.css
+++ b/css/index.css
@@ -189,17 +189,19 @@ html {
   position: absolute;
   padding: 0;
   margin: 0;
+  width: 72%;
 }
 .mainHeader .bigHeader {
   opacity: 0.23;
   z-index: 4;
-  width: 72%;
+  width: 100%;
   height: 328px;
   font-family: "Segoe UI";
   font-size: 17rem;
   font-style: italic;
   font-weight: 900;
   line-height: 382px;
+  text-align: center;
   padding: 0;
   margin: 0;
 }
