--- a/less/homePage.less
+++ b/less/homePage.less
@@ -18,17 +18,19 @@
 .mainHeader {
   position: absolute;
   .noBorder();
+  width: 72%;
 
   .bigHeader{
     opacity: 0.23;
     z-index: 4;
-    width: 72%;
+    width: 100%;
     height: 328px;
     font-family: "Segoe UI";
     font-size: 17rem;
     font-style: italic;
     font-weight: 900;
     line-height: 382px;
+    text-align: center;
     .noBorder();
   }
 
